apply plugin: 'com.android.application'

android {
    compileSdkVersion 29
    buildToolsVersion '29.0.2'
    useLibrary 'org.apache.http.legacy'
    defaultConfig {
        applicationId 'de.koelle.christian.trickytripper'
        minSdkVersion 14
        targetSdkVersion 29
        versionCode 25
        versionName '1.6.2'
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        testInstrumentationRunnerArguments clearPackageData: 'true'
    }
    lintOptions {
        checkReleaseBuilds true
        abortOnError true
        warning 'InvalidPackage'
    }
    File signFile = rootProject.file('sign/keystore.properties')
    if (signFile.exists()) {
        Properties properties = new Properties()
        properties.load(new FileInputStream(signFile))
        signingConfigs {
            release {
                storeFile rootProject.file(properties['keystore'])
                storePassword properties['storePassword']
                keyAlias properties['keyAlias']
                keyPassword properties['keyPassword']
            }
        }
    }

    buildTypes {
        debug {
            //shrinkResources true
            //minifyEnabled true
            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        release {
            zipAlignEnabled true
            shrinkResources true
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
    }
    productFlavors {
    }

    testOptions {
        unitTests.all {
            // All the usual Gradle options.
            //jvmArgs '-XX:MaxPermSize=256m'
        }
        execution 'ANDROIDX_TEST_ORCHESTRATOR'
    }
    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }
}

dependencies {
    api fileTree(include: ['*.jar'], dir: 'libs')
    api 'androidx.appcompat:appcompat:1.1.0'
    api 'androidx.legacy:legacy-support-v4:1.0.0'
    api 'com.squareup.okhttp3:okhttp:3.1.2'

    testImplementation "junit:junit:4.12"
    testImplementation "org.mockito:mockito-core:1.9.5"

    androidTestImplementation "junit:junit:4.12"
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test:runner:1.3.0-alpha03'
    androidTestUtil 'androidx.test:orchestrator:1.2.0'
}
